# rajiko-cli

./: Cargo.toml  LICENSE  README.md
src/: key.rs  login.rs  main.rs  prefecture.rs  statics.rs  util.rs  xml.rs
