[package]
name = "rajiko-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
chrono = "=0.4.44"
indicatif = "=0.18.4"
rand = "=0.10.0"
reqwest = { version = "=0.13.2", features = ["cookies", "blocking"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde-xml-rs = "=0.8.2"
