[package]
name = "rajiko-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
base64 = "=0.22.1"
chrono = "=0.4.44"
fdk-aac = "=0.8.0"
indicatif = "=0.18.4"
libpulse-binding = "=2.30.1"
libpulse-simple-binding = "=2.29.0"
rand = "=0.10.1"
reqwest = { version = "=0.13.2", default-features = false, features = ["native-tls", "cookies", "blocking"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde-xml-rs = "=0.8.2"
